--- a/amstory/src/main/res/values/styles.xml
+++ b/amstory/src/main/res/values/styles.xml
@@ -6,12 +6,18 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
     <style name="NotitleTheme" parent="AppTheme">
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="SplashTheme" parent="NotitleTheme">
+        <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@drawable/app_bg2</item>
     </style>
 
     <!--自定义dialog背景全透明无边框theme -->
