--- a/amstory/src/main/res/values/styles.xml
+++ b/amstory/src/main/res/values/styles.xml
@@ -28,4 +28,17 @@
         <item name="android:backgroundDimEnabled">true</item>
     </style>
 
+    <!-- 修改宝贝信息 -->
+    <style name="TV_UserInfo">
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="ET_UserInfo">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@null</item>
+    </style>
+
 </resources>
