首页开发，增加推荐viewpager

--- a/amstory/src/main/res/layout/activity_main.xml
+++ b/amstory/src/main/res/layout/activity_main.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#eeeeee"
+    android:background="@color/bgcolor"
     >
 
     <FrameLayout
         android:id="@+id/fl_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/transparent">
 
     </FrameLayout>
 
