--- a/amstory/src/main/res/values/colors.xml
+++ b/amstory/src/main/res/values/colors.xml
@@ -24,4 +24,8 @@
 
     <color name="divider_line">#e1e1e1</color>
     <color name="white">#ffffff</color>
+
+    <color name="bgcolor">#eeeeee</color>
+    <color name="appblue">#64a1ea</color>
+    <color name="holo_blue">#3a69f7</color>
 </resources>
