--- a/amstory/src/main/res/layout/item_list_story.xml
+++ b/amstory/src/main/res/layout/item_list_story.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/transparent"
     android:padding="3dp"
     >
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="7dp"
         >
         <LinearLayout
             android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
             android:orientation="vertical"
+            android:padding="12dp"
             android:layout_height="wrap_content">
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/list_icon"
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
                     android:scaleType="fitXY"
                     android:src="@mipmap/ic_launcher"/>
 
@@ -32,10 +34,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/type_bg"
-                    android:layout_alignRight="@+id/list_icon"
-                    android:layout_alignBottom="@+id/list_icon"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_centerInParent="true"
                     android:padding="5dp"
                     android:src="@drawable/ic_listen_icon"
                     />
@@ -43,20 +42,63 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:background="#aaffffff"
-                android:layout_height="20dp">
+                android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/list_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="name"
+                    android:textStyle="bold"
+                    android:textColor="#000"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="14sp"
-
+                    android:layout_marginTop="8dp"
+                    android:textSize="17sp"
                     />
+
+                <TextView
+                    android:id="@+id/list_author"
+                    android:layout_width="wrap_content"
+                    android:layout_below="@+id/list_name"
+                    android:layout_marginTop="10sp"
+                    android:textColor="@color/appgray"
+                    android:textSize="11sp"
+                    android:text="作者：未知"
+                    android:layout_height="wrap_content" />
             </RelativeLayout>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="9dp"
+                android:layout_marginBottom="9dp"
+                android:background="#dddddd"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@mipmap/ic_launcher"/>
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="17dp"
+                    android:src="@mipmap/ic_launcher"/>
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="17dp"
+                    android:src="@mipmap/ic_launcher"/>
+            </LinearLayout>
+
+
 
         </LinearLayout>
 
