--- a/amstory/src/main/res/layout/tuijian_fragment_vp_item.xml
+++ b/amstory/src/main/res/layout/tuijian_fragment_vp_item.xml
@@ -2,22 +2,23 @@
 
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgcolor"
     >
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardElevation="18dp"
+        app:cardElevation="8dp"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="#303069"
         app:cardCornerRadius="10dp"
         app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         >
 
         <LinearLayout
@@ -38,8 +39,8 @@
 
                 <ImageView
                     android:id="@+id/iv_play_tuijian_vp_item"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
                     android:layout_centerInParent="true"
                     android:src="@mipmap/ic_launcher"/>
 
@@ -47,14 +48,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:orientation="horizontal">
                     <TextView
                         android:id="@+id/tv_name_tuijian_item"
@@ -88,6 +88,8 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:lines="2"
+                    android:textSize="12sp"
+                    android:lineSpacingExtra="3dp"
                     android:ellipsize="end"
                     />
 
