--- a/amstory/src/main/res/values/colors.xml
+++ b/amstory/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#edffffff</color>
 
 
     <color name="waveform_selected">#33b5e5</color>
@@ -25,7 +25,8 @@
     <color name="divider_line">#e1e1e1</color>
     <color name="white">#ffffff</color>
 
-    <color name="bgcolor">#eeeeee</color>
+    <color name="bgcolor">#efefef</color>
     <color name="appblue">#64a1ea</color>
     <color name="holo_blue">#3a69f7</color>
+    <color name="appgray">#444444</color>
 </resources>
