--- a/andooptabframe/src/main/res/layout/frame_layout.xml
+++ b/andooptabframe/src/main/res/layout/frame_layout.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <com.andoop.andooptabframe.core.view.TabFrameVP
     android:id="@+id/vp_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_above="@+id/ll_frame"/>
-    <com.andoop.andooptabframe.core.view.TabGroupView
-        android:id="@+id/ll_frame"
+    android:layout_above="@+id/cv_frame"/>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_frame"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="#444444"
-        android:orientation="horizontal"
-        android:padding="3dp"/>
+        app:cardElevation="8dp"
+        android:layout_height="wrap_content">
+        <com.andoop.andooptabframe.core.view.TabGroupView
+            android:id="@+id/ll_frame"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#444444"
+            android:orientation="horizontal"
+            android:padding="3dp"/>
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
