--- a/amstory/src/main/res/layout/comment_title_01.xml
+++ b/amstory/src/main/res/layout/comment_title_01.xml
@@ -8,6 +8,7 @@
         android:layout_height="25dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="15dp"
+        android:id="@+id/iv_title_search"
         android:src="@drawable/search"/>
 
     <ImageView
