--- a/amstory/src/main/res/values/styles.xml
+++ b/amstory/src/main/res/values/styles.xml
@@ -43,6 +43,7 @@
         <item name="android:layout_width">80dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/holo_blue</item>
     </style>
 
     <style name="ET_UserInfo">
