--- a/amstory/src/main/res/layout/activity_person_setting.xml
+++ b/amstory/src/main/res/layout/activity_person_setting.xml
@@ -22,6 +22,7 @@
             />
     </RelativeLayout>
     <View
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:background="#E7E7E7"
@@ -109,4 +110,75 @@
         android:background="#E7E7E7"
         />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="150dp">
+        <RelativeLayout
+            android:layout_width="140dp"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:background="@mipmap/ic_launcher"/>
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+
+                <TextView
+                    style="@style/TV_UserInfo"
+                    android:text="宝宝昵称"
+                    />
+                <TextView
+                    android:text="宝宝"
+                    android:gravity="center_vertical"
+                    style="@style/ET_UserInfo"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+
+                <TextView
+                    style="@style/TV_UserInfo"
+                    android:text="宝宝性别"
+                    />
+                <TextView
+                    android:text="男"
+                    android:gravity="center_vertical"
+                    style="@style/ET_UserInfo"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+                <TextView
+                    style="@style/TV_UserInfo"
+                    android:text="宝宝生日"
+                    />
+                <TextView
+                    android:text="2017/01/01"
+                    android:gravity="center_vertical"
+                    style="@style/ET_UserInfo"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="#E7E7E7"
+        />
 </LinearLayout>
