修改个人页面

--- a/amstory/src/main/res/layout/activity_person_setting.xml
+++ b/amstory/src/main/res/layout/activity_person_setting.xml
@@ -46,7 +46,9 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="5dp"
+        android:layout_height="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="#E7E7E7"
         />
     <LinearLayout
@@ -62,11 +64,12 @@
             android:gravity="center_vertical"
             style="@style/ET_UserInfo"
             />
-
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="5dp"
+        android:layout_height="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="#E7E7E7"
         />
     <LinearLayout
@@ -86,7 +89,9 @@
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="5dp"
+        android:layout_height="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="#E7E7E7"
         />
     <LinearLayout
@@ -102,7 +107,6 @@
             android:gravity="center_vertical"
             style="@style/ET_UserInfo"
             />
-
     </LinearLayout>
     <View
         android:layout_width="match_parent"
