--- a/amstory/src/main/res/drawable/ic_right.xml
+++ b/amstory/src/main/res/drawable/ic_right.xml
@@ -1,4 +1,4 @@
 <vector android:height="24dp" android:viewportHeight="32.0"
     android:viewportWidth="32.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#707070" android:pathData="M16.8,16.8C17,16.6 17,16.2 17,16s0,-0.6 -0.2,-0.8L9.8,8.2C9.4,8 8.6,8 8.2,8.2S8,9.4 8.2,9.8L14.6,16l-6.2,6.2c-0.4,0.4 -0.4,1 0,1.4s1,0.4 1.4,0L16.8,16.8zM15.2,9.8 L21.6,16l-6.2,6.2c-0.4,0.4 -0.4,1 0,1.4s1,0.4 1.4,0l7,-7C24,16.6 24,16.2 24,16s0,-0.6 -0.2,-0.8L16.8,8.2C16.4,8 15.6,8 15.2,8.2S15,9.4 15.2,9.8z"/>
+    <path android:fillColor="#7babfd" android:pathData="M16.8,16.8C17,16.6 17,16.2 17,16s0,-0.6 -0.2,-0.8L9.8,8.2C9.4,8 8.6,8 8.2,8.2S8,9.4 8.2,9.8L14.6,16l-6.2,6.2c-0.4,0.4 -0.4,1 0,1.4s1,0.4 1.4,0L16.8,16.8zM15.2,9.8 L21.6,16l-6.2,6.2c-0.4,0.4 -0.4,1 0,1.4s1,0.4 1.4,0l7,-7C24,16.6 24,16.2 24,16s0,-0.6 -0.2,-0.8L16.8,8.2C16.4,8 15.6,8 15.2,8.2S15,9.4 15.2,9.8z"/>
 </vector>
