--- a/amstory/src/main/res/layout/activity_story_make.xml
+++ b/amstory/src/main/res/layout/activity_story_make.xml
@@ -2,135 +2,214 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eeeeee"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#fff"
     android:orientation="vertical">
-
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="240dp">
-
-        <andoop.android.amstory.customview.LyricRecordView
-            android:id="@+id/lrv_story_make"
-            android:layout_width="match_parent"
-            android:layout_height="240dp" />
-
-        <andoop.android.amstory.customview.ShaderView
-            android:id="@+id/sv_story_make"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_centerInParent="true"
-            android:background="#44000000" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0px"
-        android:layout_weight="1">
-        <include layout="@layout/wavaview_layout"/>
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="15dp"
+            android:onClick="finishPage"
+            android:src="@drawable/back_blue"/>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15dp"
+            android:onClick="toEdit"
+            android:src="@drawable/ok_blue"/>
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/tv_timer"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_story_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="3dp"
-        android:text=""
-        android:textSize="16sp"
-        android:visibility="visible" />
-
-    <LinearLayout
+        android:layout_gravity="center"
+        android:textSize="18sp"
+        android:textColor="@color/appblue"
+        android:text="荞麦"/>
+    <TextView
+        android:id="@+id/tv_story_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="11sp"
+        android:layout_marginTop="6dp"
+        android:text="安徒生"/>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="#fff"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:onClick="playRecord"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_play_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/play_state_selector" />
-
-            <TextView
-                android:id="@+id/play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:text="播放" />
-
-        </LinearLayout>
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:layout_height="0dp">
+        <andoop.android.amstory.customview.LyricRecordView
+            android:id="@+id/lrv_story_make"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <andoop.android.amstory.customview.ShaderView
+            android:id="@+id/sv_story_make"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:background="#44000000" />
 
         <ImageView
-            android:id="@+id/takevoice"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="takevoice"
-            android:src="@drawable/record_state_selector" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:onClick="cungao"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_save_bt_cg" />
-
-            <TextView
-                android:id="@+id/bt_delete_choose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:gravity="center"
-                android:text="存稿"
-
-                />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:alpha="0.7"
+            android:src="@drawable/next_blue"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="140dp">
+        <include layout="@layout/wavaview_layout"/>
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:background="#fff">
+        android:layout_height="55dp">
 
+        <ImageView
+            android:id="@+id/iv_return_next"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
+            android:onClick="return_next"
+            android:src="@drawable/return_blue"/>
+
+        <ImageView
+            android:id="@+id/iv_cancle_return_next"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/iv_return_next"
+            android:onClick="return_next"
+            android:src="@drawable/cacle_return_blue"/>
 
         <TextView
+            android:id="@+id/tv_timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:padding="3dp"
+            android:text="00:00.00"
+            android:textSize="15sp"
+            android:visibility="visible" />
+
+
+        <ImageView
+            android:id="@+id/iv_toleft"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_centerVertical="true"
-            android:text="下一步"
-            android:textColor="#333333"
-            android:textSize="16sp"
-            android:layout_alignParentRight="true"
-            android:textStyle="bold"
             android:layout_marginRight="20dp"
-            android:onClick="toEdit"
-            />
+            android:layout_toLeftOf="@+id/iv_toright"
+            android:onClick="toLeft"
+            android:src="@drawable/ic_left"/>
 
-
+        <ImageView
+            android:id="@+id/iv_toright"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="30dp"
+            android:onClick="toRight"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_right"/>
 
     </RelativeLayout>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="5dp"
+        android:paddingTop="10dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:background="#fff"
+            android:gravity="center_vertical">
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="0dp"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:onClick="playRecord"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/iv_play_icon"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/play_blue" />
+
+                <TextView
+                    android:id="@+id/play"
+                    android:layout_width="wrap_content"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="播放" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/takevoice"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_weight="1"
+                android:onClick="takevoice"
+                android:src="@drawable/record_state_selector" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:onClick="cungao"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/delete_blue" />
+
+                <TextView
+                    android:id="@+id/bt_delete_choose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    android:text="存稿"
+
+                    />
+
+
+
+            </LinearLayout>
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="0dp"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 
 
 </LinearLayout>
