--- a/amstory/src/main/res/layout/item_rv_personal.xml
+++ b/amstory/src/main/res/layout/item_rv_personal.xml
@@ -2,16 +2,16 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="100dp"
     app:cardElevation="5dp"
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="8dp"
-    android:layout_height="match_parent">
+    android:layout_height="100dp">
 
     <ImageView
         android:id="@+id/iv_item_pf"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:scaleType="fitXY"/>
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"/>
 
 </android.support.v7.widget.CardView>
