--- a/amstory/src/main/res/layout/activity_main.xml
+++ b/amstory/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="@color/bgcolor"
     >
 
+    <include layout="@layout/comment_title_01"/>
     <FrameLayout
         android:id="@+id/fl_content"
         android:layout_width="match_parent"
