--- a/amstory/src/main/res/layout/activity_person_setting.xml
+++ b/amstory/src/main/res/layout/activity_person_setting.xml
@@ -10,26 +10,35 @@
     <include layout="@layout/comment_title_02"></include>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:background="#fff">
 
         <ImageView
             android:id="@+id/iv_pf_head"
-            android:layout_width="95dp"
-            android:layout_height="95dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_centerHorizontal="true"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/mycover"
+            />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/xiangji"
+            android:layout_toRightOf="@id/iv_pf_head"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="-25dp"
             />
     </RelativeLayout>
     <View
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:background="#E7E7E7"
+        android:background="@color/person_bgcolor"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:orientation="horizontal"
         android:layout_height="40dp">
 
         <TextView
@@ -46,13 +55,14 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="0.5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#E7E7E7"
+        android:background="#C2C2C2"
         />
     <LinearLayout
         android:layout_width="match_parent"
+        android:orientation="horizontal"
         android:layout_height="40dp">
 
         <TextView
@@ -67,14 +77,15 @@
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="0.5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#E7E7E7"
+        android:background="#C2C2C2"
         />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:orientation="horizontal">
 
         <TextView
             style="@style/TV_UserInfo"
@@ -89,14 +100,15 @@
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="0.5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#E7E7E7"
+        android:background="#C2C2C2"
         />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:orientation="horizontal">
 
         <TextView
             style="@style/TV_UserInfo"
@@ -111,22 +123,31 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:background="#E7E7E7"
+        android:background="@color/person_bgcolor"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_height="150dp">
+        android:layout_height="120dp">
         <RelativeLayout
             android:layout_width="140dp"
             android:layout_height="match_parent">
             <ImageView
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:background="@mipmap/ic_launcher"/>
+                android:layout_centerInParent="true"
+                android:id="@+id/child_iv"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/my_user_default"/>
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/xiangji"
+                android:layout_toRightOf="@id/child_iv"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="-20dp"
+                android:layout_marginBottom="20dp"
+                />
         </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -183,6 +204,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:background="#E7E7E7"
+        android:background="@color/person_bgcolor"
         />
 </LinearLayout>
