--- a/amstory/src/main/res/layout/activity_story_detail.xml
+++ b/amstory/src/main/res/layout/activity_story_detail.xml
@@ -54,14 +54,13 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@mipmap/ic_launcher"
                             android:scaleType="fitXY"
                             android:id="@+id/iv_asd_icon" />
 
                         <ImageView
                             android:layout_width="55dp"
                             android:layout_height="55dp"
-                            android:src="@mipmap/ic_launcher"
+                            android:src="@drawable/bofang"
                             android:onClick="toPlay"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
