--- a/amstory/src/main/res/layout/item_list_story.xml
+++ b/amstory/src/main/res/layout/item_list_story.xml
@@ -26,7 +26,7 @@
                     android:id="@+id/list_icon"
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
-                    android:scaleType="fitXY"
+                    android:scaleType="centerCrop"
                     android:src="@mipmap/ic_launcher"/>
 
                 <ImageView
