--- a/amstory/src/main/res/layout/tingshushi_fragment_layout.xml
+++ b/amstory/src/main/res/layout/tingshushi_fragment_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<include layout="@layout/comment_title_01" />
+<!--<include layout="@layout/comment_title_01" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
