--- a/amstory/src/main/res/layout/tuijian_fragment_vp_item.xml
+++ b/amstory/src/main/res/layout/tuijian_fragment_vp_item.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         app:cardCornerRadius="10dp"
         app:cardPreventCornerOverlap="true"
+        app:contentPadding="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
@@ -42,6 +43,7 @@
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:layout_centerInParent="true"
+                    android:visibility="gone"
                     android:src="@mipmap/ic_launcher"/>
 
             </RelativeLayout>
@@ -55,6 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
                     <TextView
                         android:id="@+id/tv_name_tuijian_item"
@@ -64,7 +67,8 @@
                         android:textSize="16sp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
-                        android:text="《荞麦》"/>
+                        android:textStyle="bold"
+                        android:text="荞麦"/>
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
