--- a/amstory/src/main/res/values/colors.xml
+++ b/amstory/src/main/res/values/colors.xml
@@ -27,7 +27,10 @@
     <color name="white">#ffffff</color>
 
     <color name="bgcolor">#efefef</color>
-    <color name="appblue">#64a1ea</color>
+    <color name="appblue">#7babfd</color>
     <color name="holo_blue">#3a69f7</color>
     <color name="appgray">#444444</color>
+
+    <color name="person_bgcolor">#f0ffff</color>
+    <color name="base_text_color">#7babfd</color>
 </resources>
