--- a/amstory/src/main/res/layout/yx_list_item.xml
+++ b/amstory/src/main/res/layout/yx_list_item.xml
@@ -3,7 +3,10 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
+    android:paddingLeft="20dp"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp"
+    android:paddingRight="13dp"
     android:gravity="center_vertical"
     android:background="#fff"
     >
@@ -12,6 +15,8 @@
         android:id="@+id/tv_yxlistitemname"
         android:layout_width="0dp"
         android:layout_weight="1"
+        android:textSize="12sp"
+        android:textColor="#000"
         android:layout_height="wrap_content"
         android:text="音效名称"/>
 
@@ -28,15 +33,15 @@
         android:layout_width="12dp"
         android:layout_height="12dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="10dp"
         android:src="@drawable/ic_delate_bt"/>
 
     <ImageView
         android:id="@+id/iv_yxlistitemlocate"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:src="@drawable/ic_location"/>
 
 </LinearLayout>
