--- a/amstory/src/main/res/layout/activity_story_eidt.xml
+++ b/amstory/src/main/res/layout/activity_story_eidt.xml
@@ -53,12 +53,12 @@
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:background="#fff"
-        android:layout_height="120dp">
+        android:layout_height="150dp">
 
         <andoop.android.amstory.customview.LyricRecordView
             android:id="@+id/lrv_story_edit"
             android:layout_width="match_parent"
-            android:layout_height="120dp" />
+            android:layout_height="150dp" />
 
         <andoop.android.amstory.customview.ShaderView
             android:id="@+id/sv_story_edit"
@@ -72,7 +72,7 @@
     <FrameLayout
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="110dp">
         <include layout="@layout/wavaview_layout"/>
     </FrameLayout>
 
@@ -112,141 +112,160 @@
 
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:background="#fff"
-        android:layout_height="35dp">
-
-        <TextView
-            android:id="@+id/tv_edit_bg"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:gravity="center"
-            android:onClick="toBackgroud"
-            android:text="背景音乐"/>
-        <View
-            android:layout_width="5dp"
-            android:layout_height="match_parent"
-            android:background="#eeeeee"/>
-
-        <TextView
-            android:id="@+id/tv_edit_yx"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:gravity="center"
-            android:onClick="toYinxiao"
-            android:text="音效特效"/>
-
-    </LinearLayout>
-
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
-            android:id="@+id/ll_edit_yinxiao_rootview"
-            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#eeeeee"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_edit_add_yinxiao"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:src="@drawable/ic_add_ee"
-                android:layout_gravity="center"
-                android:background="#fff"
-                android:onClick="addYinxiao"
-                android:layout_marginBottom="8dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="2dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_edit_bg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textStyle="bold"
+                android:textSize="11sp"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:text="背景音乐"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:layout_marginLeft="13sp"
+                android:gravity="center_vertical"
+                android:textColor="@color/appblue"
+                android:onClick="addBackMusic"
+                android:text="未选择"
                 />
-
-            <ListView
-                android:id="@+id/lv_edit_yinxiao_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/rv_edit_bg_rootview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#fff"
-            android:layout_margin="5dp"
+            android:layout_margin="8dp"
+            android:visibility="gone"
+            android:orientation="horizontal"
             >
 
 
-            <ImageView
-                android:id="@+id/iv_edit_add_backgroud"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_centerInParent="true"
-                android:onClick="addBackMusic"
-                android:src="@drawable/ic_add_ee"/>
 
-            <RelativeLayout
-                android:visibility="gone"
-                android:id="@+id/rl_edit_backgroud_rootview"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv_edit_backgroud_name"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:layout_centerInParent="true"
-                >
+                android:textSize="12sp"
+                android:textColor="#000"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="20dp"
+                android:text="背景名称"/>
 
-                <TextView
-                    android:id="@+id/tv_edit_backgroud_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textColor="#000"
-                    android:layout_marginLeft="15dp"
-                    android:text="背景名称"/>
 
-                <ImageView
-                    android:id="@+id/iv_edit_delete_backgroud"
-                    android:layout_width="13dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_height="13dp"
-                    android:onClick="deleteBgMusic"
-                    android:layout_marginRight="15dp"
-                    android:src="@drawable/ic_delate_bt"/>
 
-                <SeekBar
-                    android:id="@+id/sb_edit_backgroud_voice"
-                    android:layout_below="@id/iv_edit_delete_backgroud"
+            <SeekBar
+                android:id="@+id/sb_edit_backgroud_voice"
+                android:layout_width="0dp"
+                android:layout_weight="4"
+                android:max="100"
+                android:progress="100"
+                android:layout_height="wrap_content" />
+
+
+            <ImageView
+                android:id="@+id/iv_edit_delete_backgroud"
+                android:layout_width="13dp"
+                android:layout_height="13dp"
+                android:onClick="deleteBgMusic"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/ic_delate_bt"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="2dp"
+        android:orientation="vertical"
+
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#fff"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            >
+
+            <TextView
+                android:id="@+id/tv_edit_yx"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textStyle="bold"
+                android:textSize="11sp"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:text="音效特效"/>
+
+
+            <ImageView
+                android:id="@+id/iv_edit_add_yinxiao"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:padding="4dp"
+                android:src="@drawable/ic_add_ee"
+                android:layout_gravity="center_vertical"
+                android:background="#fff"
+                android:layout_marginLeft="15dp"
+                android:onClick="addYinxiao"
+                />
+
+        </LinearLayout>
+
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#fff"
+            android:layout_marginTop="1dp"
+            >
+
+            <LinearLayout
+                android:id="@+id/ll_edit_yinxiao_rootview"
+                android:visibility="visible"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:layout_margin="5dp"
+                android:orientation="vertical">
+
+                <ListView
+                    android:id="@+id/lv_edit_yinxiao_list"
                     android:layout_width="match_parent"
-                    android:layout_marginTop="20dp"
-                    android:max="100"
-                    android:progress="100"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent"/>
 
-            </RelativeLayout>
-
-        </RelativeLayout>
+            </LinearLayout>
 
 
 
+        </FrameLayout>
 
-
-    </FrameLayout>
-
+    </LinearLayout>
 
 
 
