--- a/amstory/src/main/res/values/styles.xml
+++ b/amstory/src/main/res/values/styles.xml
@@ -13,6 +13,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyDrawerView" parent="Theme.AppCompat.Light.NoActionBar">
+        <!--背景颜色及和透明程度-->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--是否去除标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <!--是否去除边框-->
+        <item name="android:windowFrame">@null</item>
+        <!--是否浮现在activity之上-->
+        <!--<item name="android:windowIsFloating">true</item>-->
+        <!--是否模糊-->
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
     <style name="NotitleTheme" parent="AppTheme">
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
