--- a/amstory/src/main/res/layout/activity_bg_list.xml
+++ b/amstory/src/main/res/layout/activity_bg_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_bg_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,18 +27,63 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="title"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="12dp"
             android:layout_gravity="center_horizontal"/>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_choose_bg"
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="12dp"
+            android:background="#ddeeee"
+            />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_choose_bg"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_marginTop="10dp"
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:orientation="horizontal"
+            >
+            <ScrollView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="35dp">
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tl_ab_cats"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    app:tabIndicatorColor="#0000"
+                    app:tabSelectedTextColor="@color/appblue"
+                    app:tabTextColor="@color/appgray"
+                    android:orientation="horizontal">
+                </android.support.design.widget.TabLayout>
+
+            </ScrollView>
+
+            <TextView
+                android:id="@+id/tv_bg_add"
+                android:layout_width="60dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:background="#dddddd"
+                android:layout_height="match_parent"
+                android:onClick="addMusic"
+                android:text="添加"/>
+        </LinearLayout>
+
 
 
     </LinearLayout>
