--- a/amstory/src/main/res/layout/item_list_choosebg.xml
+++ b/amstory/src/main/res/layout/item_list_choosebg.xml
@@ -1,67 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_listchoose_mr"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="5dp"
-    app:cardUseCompatPadding="true"
-    >
+    android:paddingLeft="8dp"
+    android:paddingTop="5dp"
+    android:paddingRight="8dp">
 
-        <LinearLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_list_choose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="6dp"
+        android:layout_centerHorizontal="true"
+        >
+        <RelativeLayout
+            android:id="@+id/rl_listchoose_bg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center_vertical"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp"
             >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="20dp"
-                    android:padding="3dp"
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/play_blue"/>
-
-                <ImageView
-                    android:layout_height="20dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="3dp"
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/ic_add_ee"/>
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_listchoose_mr_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"
-                android:lines="1"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:ellipsize="marquee"
-                android:textSize="11sp"
-                android:text="title"
+            <ImageView
+                android:id="@+id/iv_mc_icon"
+                android:layout_width="67dp"
+                android:layout_height="67dp"
+                android:src="@drawable/niuniu"
+                android:scaleType="centerCrop"
+                android:layout_centerInParent="true"
                 />
-            <TextView
-                android:id="@+id/tv_listchoose_mr_size"
+            <ImageView
+                android:id="@+id/iv_mc_play"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="38dp"
-                android:layout_toRightOf="@+id/tv_list_mr_name"
-                android:textSize="12sp"
-                android:text="size"/>
-        </LinearLayout>
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_play"/>
 
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
+
+    <TextView
+        android:id="@+id/tv_list_choose_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cv_list_choose"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="3dp"
+        android:textSize="12sp"
+        android:text="音效"/>
+
+    </RelativeLayout>
