--- a/amstory/src/main/res/values/colors.xml
+++ b/amstory/src/main/res/values/colors.xml
@@ -6,14 +6,18 @@
 
 
     <color name="waveform_selected">#33b5e5</color>
+    <color name="waveform_selected2">#ca0616</color>
     <color name="waveform_unselected">#195a72</color>
     <color name="waveform_unselected_bkgnd_overlay">#0a242d</color>
+    <color name="waveform_unselected_bkgnd_overlay2">#e7eef1</color>
     <color name="selection_border">#ffffff</color>
+    <color name="selection_border2">#4edc16</color>
     <color name="playback_indicator">#ffff66</color>
     <color name="grid_line">#66ffffff</color>
     <color name="timecode">#ddffffdd</color>
     <color name="mbg">#eeeeee</color>
     <color name="timecode_shadow">#aa000000</color>
+    <color name="timecode_shadow2">#cbd8de</color>
     <color name="waveform_bg">#cccccc</color>
 
     <color name="type_bkgnd_alarm">#88880000</color>
