更改了一些图标

--- a/amstory/src/main/res/layout/activity_story_detail.xml
+++ b/amstory/src/main/res/layout/activity_story_detail.xml
@@ -122,6 +122,7 @@
                     >
 
                     <ImageView
+                        android:id="@+id/iv_like"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:src="@drawable/like_selector"/>
@@ -152,9 +153,10 @@
                     >
 
                     <ImageView
+                        android:id="@+id/iv_share"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/share_selector"/>
+                        android:src="@drawable/share"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
