--- a/amstory/src/main/res/layout/item_allcates.xml
+++ b/amstory/src/main/res/layout/item_allcates.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_vertical"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
