--- a/amstory/src/main/res/layout/item_list_story.xml
+++ b/amstory/src/main/res/layout/item_list_story.xml
@@ -5,19 +5,21 @@
     android:background="@color/transparent"
     android:padding="3dp"
     >
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="7dp"
-        >
+        android:layout_marginBottom="7dp">
+
         <LinearLayout
-            android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="12dp"
-            android:layout_height="wrap_content">
+            android:padding="12dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -27,77 +29,79 @@
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:scaleType="centerCrop"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/iv_list_listen"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/type_bg"
                     android:layout_centerInParent="true"
+                    android:background="@drawable/type_bg"
                     android:padding="5dp"
-                    android:src="@drawable/ic_listen_icon"
-                    />
+                    android:src="@drawable/ic_listen_icon" />
 
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:background="#aaffffff"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="#aaffffff">
+
                 <TextView
                     android:id="@+id/list_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="name"
-                    android:textStyle="bold"
-                    android:textColor="#000"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="8dp"
+                    android:text="name"
+                    android:textColor="#000"
                     android:textSize="17sp"
-                    />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/list_author"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/list_name"
                     android:layout_marginTop="10sp"
-                    android:textColor="@color/appgray"
-                    android:textSize="11sp"
                     android:text="作者：未知"
-                    android:layout_height="wrap_content" />
+                    android:textColor="@color/appgray"
+                    android:textSize="11sp" />
             </RelativeLayout>
 
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="9dp"
                 android:layout_marginBottom="9dp"
-                android:background="#dddddd"/>
+                android:layout_marginTop="9dp"
+                android:background="#dddddd" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@mipmap/ic_launcher"/>
 
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="17dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:id="@+id/iv_share"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/share" />
 
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="17dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:id="@+id/iv_like"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:src="@drawable/like_no" />
+
+                <ImageView
+                    android:id="@+id/iv_praise"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:src="@drawable/praise_no" />
             </LinearLayout>
-
 
 
         </LinearLayout>
